--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
 			"pre-commit": "pretty-quick --staged"
 		}
 	},
+	"engines": {
+		"node": ">=10.9"
+	},
 	"dependencies": {
 		"@jlguenego/sudoku-generator": "^1.0.7",
 		"react": "^16.8.6",
