--- a/.browserslistrc
+++ b/.browserslistrc
@@ -1,9 +1,3 @@
-[production]
->0.2%
+> 0.2% in US and last 5 versions
 not dead
-not op_mini all
-
-[development]
-last 1 chrome version
-last 1 firefox version
-last 1 safari version
+not ie <= 11
