--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	},
 	"dependencies": {
 		"@jlguenego/sudoku-generator": "^1.0.7",
+		"gsap": "2.1.3",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
 		"react-scripts": "3.0.1"
