--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 		"gsap": "2.1.3",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
-		"react-scripts": "3.0.1"
+		"react-scripts": "3.0.1",
+		"typeface-erica-one": "0.0.71"
 	},
 	"devDependencies": {
 		"husky": "^2.7.0",
