--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
 		"node": ">=10.9"
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "1.2.25",
+		"@fortawesome/free-solid-svg-icons": "5.11.2",
+		"@fortawesome/react-fontawesome": "0.1.7",
 		"@jlguenego/sudoku-generator": "^1.0.7",
 		"classnames": "2.2.6",
 		"gsap": "2.1.3",
