--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
 		"@jlguenego/sudoku-generator": "^1.0.7",
 		"classnames": "2.2.6",
 		"gsap": "2.1.3",
-		"react": "^16.8.6",
-		"react-dom": "^16.8.6",
-		"react-scripts": "3.0.1",
+		"react": "16.11.0",
+		"react-dom": "16.11.0",
+		"react-scripts": "3.2.0",
 		"typeface-erica-one": "0.0.71"
 	},
 	"devDependencies": {
-		"husky": "^2.7.0",
-		"prettier": "^1.18.2",
-		"pretty-quick": "^1.11.1"
+		"husky": "3.0.9",
+		"prettier": "1.19.1",
+		"pretty-quick": "2.0.1"
 	}
 }
