--- a/.github/workflows/nowdeploy.yml
+++ b/.github/workflows/nowdeploy.yml
@@ -15,6 +15,6 @@ jobs:
           node-version: 10
           registry-url: https://npm.pkg.github.com/
           scope: '@philipf5'
-      - run: now --prod
+      - run: now --prod --token $ZEIT_TOKEN
         env:
           ZEIT_TOKEN: ${{secrets.ZEIT_TOKEN}}
