--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "sudoku",
-	"version": "1.0.0-pre.2",
+	"version": "1.0.0",
 	"author": "Philip Fulgham (https://www.philipfulgham.com)",
 	"repository": "git://github.com/philipf5/sudoku.git",
 	"private": true,
