--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"lint": "eslint \"**/*.{js,jsx}\"",
-		"now-build": "npm run build"
+		"lint": "eslint \"**/*.{js,jsx}\""
 	},
 	"husky": {
 		"hooks": {
