Deploy only on tags

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,8 @@ name: Azure Static Web Apps CI/CD
 
 on:
   push:
-    branches:
-      - master
+    tags:
+      - '*'
   pull_request:
     types: [opened, synchronize, reopened, closed]
     branches:
